[project]
name = "events-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "flask-jwt-extended==4.6.0",
    "flask-sqlalchemy==3.1.1",
    "flask-swagger-ui==4.11.1",
    "pytest>=9.0.2",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "requests>=2.32.5",
]
